tests/failed/03-expected-attr-args.stderr
error: expected attribute arguments in parentheses: #[endian(...)]
 --> $DIR/03-expected-attr-args.rs:4:1
  |
4 | #[endian]
  | ^^^^^^^^^
